Thesis: started describing metatheory of type theory.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -50,6 +50,8 @@
 \newcommand{\typeconv}[3]{#1 \vdash #2 \equiv #3}
 \newcommand{\term}[3]{#1 \vdash #2 : #3}
 \newcommand{\termconv}[4]{#1 \vdash #2 \equiv #3 : #4}
+\newcommand{\typecomp}[3]{#1 \vdash #2 \longrightarrow #3}
+\newcommand{\termcomp}[4]{#1 \vdash #2 \longrightarrow #3 : #4}
 
 % Empty type.
 \newcommand{\Empty}{\bot}
@@ -277,13 +279,15 @@ The most important core rule that involves type convertibility is called the sub
 
 Moreover, for each type formation rule we have one congruence rule which says that types formed from equal components are equal. For example, for the type $\Fin{n}$ we have the congruence rule which says if we can derive $\termconv{\Gamma}{n}{m}{\N}$, then we can derive $\typeconv{\Gamma}{\Fin{n}}{\Fin{m}}$. These congruence rules allow us to answer our initial question in the affirmative -- because $2 + 2$ and $3 + 1$ are convertible, i.e. $\termconv{\Gamma}{2 + 2}{3 + 1}{\N}$, the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$ are also convertible, i.e. $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{3 + 1}}$.
 
-We are mostly done describing type theory, but we will take some more time to list differences between our presentation and what may be found elsewhere. First, some presentations of type theory can include additional judgements. For example, there may be a context convertibility judgement -- because types like $\Fin{2 + 2}$ and $\Fin{3 + 1}$ can appear in contexts as part of an assumption, judging whether two contexts are equal may be of importance. This is especially the case in more concrete presentations aimed at an implementation. See \cite{Danielsson} and \cite{EatItself} for type theories that have a context convertibility judgement.
+We are mostly done describing type theory, but we will take some more time to list differences between our presentation and what may be found elsewhere. First, some presentations of type theory can include additional judgements. For example, there may be a context convertibility judgement -- because types like $\Fin{2 + 2}$ and $\Fin{3 + 1}$ can appear in contexts as part of an assumption, judging whether two contexts are equal may be of importance. This is especially the case in more concrete presentations aimed at implementation. See \cite{Danielsson} and \cite{EatItself} for type theories that have a context convertibility judgement.
 
 Second, some presentations of types theory may not have some of the judgements we have seen. This is particularly the case for the type formation judgement and the type convertibility judgement, as they may be replaced by formulating type formation rules as introduction rules for the universe\footnote{We didn't discuss universes in our presentation, as their handling is somewhat technical.} and type convertibility rules as term convertibility rules for the universe. See \cite{HoTTBook} (Appendix A) for a text that takes this approach
 
 We didn't discuss substitution in our presentation of type theory, but there are typically two ways of doing it. The first one, called implicit substitutions, is to define a meta-level substitution function by recursion. The second one, called explicit substitutions, is to introduce more judgements (the well-formed substitution judgement and the substitution convertibility judgement) and more inference rules for term and type convertibility which describe how the substitutions are actually computed. The implicit approach is more abstract, less detailed and, in general, better suited for informal presentations. The explicit approach is more concrete, more detailed and better fit for the purpose of implementation. For presentations of type theory with explicit substitutions, see \cite{Danielsson} and \cite{EatItself}.
 
-That's it. Even though a full formal presentation of type theory is massive (the number of inference rules can easily surpass one hundred if we count all the congruence rules for all types), the basic idea behind it is very simple, regular and beautiful (well, at least once you get used to it). Of course the above presentation is far from being complete -- to be, we would have to list all the formation, introduction, elimination, computation and uniqueness rules for all types, and also a lot of these boring congruence rules whose role is to make sure everything works as expected.
+Of course our presentation of type theory is far from being complete -- to be, we would have to list all the formation, introduction, elimination, computation and uniqueness rules for all types. If we also diligently list all the boring congruence rules, the number of inference rules can easily surpass one hundred. But even though a full formal presentation of type theory is massive, the basic idea behind it is very simple and beautiful.
+
+We are not done yet, however -- after discussing how type theory works, it's time to see its most important metatheoretic properties. To state most of them, we need to look at computation from a different angle -- we need to properly describe what it means that a term $t$ computes (reduces) to term $t'$, which we will write as $t \leadsto t'$. The definition of this relation is pretty simple, but also long. The most important rules for $\leadsto$ are the previously discussed computation and uniqueness rules, read from left to right. So, for natural numbers, we have $\recN{z}{s}{0} \leadsto z$ and $\recN{z}{s}{\suc{n}} \leadsto s(\recN{z}{s}{n})$ from the computation rules and $\recN{0}{\m{succ}}{n} \leadsto n$ from the uniqueness rule. Note that it is very rare to include this uniqueness reduction rule. Besides, we also have a lot of congruence rules, although this time they look differently from these for the term convertibility judgement. Namely, given $z \leadsto z'$, we have $\recN{z}{s}{n} \leadsto \recN{z'}{s}{n}$. Similarly, given $s \leadsto s'$ we have $\recN{z}{s}{n} \leadsto \recN{z}{s'}{n}$ and given $n \leadsto n'$ we have $\recN{z}{s}{n'}$.
 
 Coq's logic\footnote{By Coq's logic we mean its term language, Gallina.} is consistent, which means that it is impossible to prove \m{False} in the empty context. This fact follows from a property enjoyed by Coq, called canonicity: every term in the empty context evaluates to a canonical form in a finite number of computation steps, no matter in what order these steps are carried out. A canonical form is what we intuitively expect the final result of a computation to look like: for natural numbers, the canonical forms are $0, 1, 2, \dots$ (i.e. $\m{0}, \m{\suc{0}}, \m{\suc{\suc{0}}}, \dots$), for booleans they are \m{true} and \m{false} and so on. In general, the canonical forms of an inductive type are generated by its constructors.
 
