Thesis: refactoring of some computation and uniqueness rules.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -59,7 +59,7 @@
 % Natural numbers.
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\suc}[1]{\m{succ}(#1)}
-\newcommand{\recN}[3]{\m{rec}_\N(#1, #2, #3)}
+\newcommand{\recN}[4]{\m{rec}_\N(#1, #2, #3, #4)}
 
 % Finite types.
 \newcommand{\Fin}[1]{\m{Fin}(#1)}
@@ -255,7 +255,7 @@ Moving on to the type-directed rules: for each type there is exactly one rule (c
 
 Rules for terms (i.e. for the typing judgement) can be divided into two main genres: introduction rules (also called constructors) and elimination rules (also called eliminators). Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number. A type need not have any introduction rules at all -- for example, the empty type $\bot$ doesn't have introduction rules because we don't want to have any way of creating terms of this type.
 
-Elimination rules for a type, on the other hand, tell us how to use terms of this type to create terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions with codomain $X$ by recursion on natural numbers, but to do proofs by induction we would need a stronger elimination rule which we won't state here to keep things simple. As with introduction rules, a type needs not have elimination rules. This is traditionally the case with the universe of types $\mathcal{U}$, although the reason behind this tradition is not clear.\footnote{One possible answer can be that an eliminator for $\mathcal{U}$ breaks parametricity. A more modern answer \cite{HoTTBlog} would be that it contradicts Univalence. For a language that allows eliminating types, see Idris 2. \cite{Idris2}}
+Elimination rules for a type, on the other hand, tell us how to use terms of this type to create terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{X}{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions with codomain $X$ by recursion on natural numbers, but to do proofs by induction we would need a stronger elimination rule which we won't state here to keep things simple. As with introduction rules, a type needs not have elimination rules. This is traditionally the case with the universe of types $\mathcal{U}$, although the reason behind this tradition is not clear.\footnote{One possible answer can be that an eliminator for $\mathcal{U}$ breaks parametricity. A more modern answer \cite{HoTTBlog} would be that it contradicts Univalence. For a language that allows eliminating types, see Idris 2. \cite{Idris2}}
 
 \label{convertible}
 
@@ -265,11 +265,11 @@ In type theory, programs are terms and their equality is realized by introducing
 
 The core inference rules that govern the convertibility judgement ensure that it is an equivalence relation. For example, there's a rule establishing that convertibility is symmetric, which means that given $\termconv{\Gamma}{t_1}{t_2}{A}$, we can derive $\termconv{\Gamma}{t_2}{t_1}{A}$. We omit the obvious rules for reflexivity and transitivity. Sometimes these core rules are only admissible, i.e. they are proved to hold even though they are not explicitly included in the definition of convertibility.
 
-Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules. Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
+Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules. Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{X}{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{X}{z}{s}{\suc{n}}}{s(\recN{X}{z}{s}{n})}{X}$.
 
-Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{0}{\m{succ}}{n}}{n}{\N}$. Note that uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory don't have the above uniqueness rule for natural numbers. As for other types, uniqueness rules are common for the unit type, the product type and the function type. For other types uniqueness rules are rare.
+Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{\N}{0}{\m{succ}}{n}}{n}{\N}$. Note that uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory don't have the above uniqueness rule for natural numbers. As for other types, uniqueness rules are common for the unit type, the product type and the function type. For other types uniqueness rules are rare.
 
-Besides computation and uniqueness rules, there is also a huge number of congruence rules which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that the successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{z_1}{s_1}{n_1}}{\recN{z_2}{s_2}{n_2}}{X}$.
+Besides computation and uniqueness rules, there is also a huge number of congruence rules which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that the successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{X}{z_1}{s_1}{n_1}}{\recN{X}{z_2}{s_2}{n_2}}{X}$.
 
 This is the end of our description of convertibility of terms, but the matter of computation hasn't been settled yet. Because types can depend on terms, computation can also occur inside types, which prompts us to consider not only term equality, but also type equality. Recall the type $\type{n : \N}{\Fin{n}}$ that has exactly $n$ elements. What relationships are there between instances of this type with various terms substituted\footnote{We won't discuss substitution in our presentation for type theory.} for $n$? For example, what is the relation between the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$? Are they the same or different?
 
@@ -287,9 +287,11 @@ We didn't discuss substitution in our presentation of type theory, but there are
 
 Of course our presentation of type theory is far from being complete -- to be, we would have to list all the formation, introduction, elimination, computation and uniqueness rules for all types. If we also diligently list all the boring congruence rules, the number of inference rules can easily surpass one hundred. But even though a full formal presentation of type theory is massive, the basic idea behind it is very simple and beautiful.
 
-Having discussed how type theory works, it's time to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$. The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of the previously discussed computation and uniqueness rules for term convertibility. Besides, there is a huge amount of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
+Having discussed how type theory works, it's time to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of the previously discussed computation and uniqueness rules for term convertibility. Besides, there is a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
 
-Let's see how this looks for natural numbers. We have $\recN{z}{s}{0} \leadsto z$ and $\recN{z}{s}{\suc{n}} \leadsto s(\recN{z}{s}{n})$, which correspond to the computation rules, and $\recN{0}{\m{succ}}{n} \leadsto n$, which corresponds to the uniqueness rule. Note that it is very rare to include this uniqueness reduction rule. Besides, we also have a lot of congruence rules, although this time they look differently from these for the term convertibility judgement. Namely, given $z \leadsto z'$, we have $\recN{z}{s}{n} \leadsto \recN{z'}{s}{n}$. Similarly, given $s \leadsto s'$ we have $\recN{z}{s}{n} \leadsto \recN{z}{s'}{n}$ and given $n \leadsto n'$ we have $\recN{z}{s}{n'}$.
+Let's see how this looks for natural numbers. We have $\recN{X}{z}{s}{0} \leadsto z$ and $\recN{X}{z}{s}{\suc{n}} \leadsto s(\recN{X}{z}{s}{n})$, which correspond to the computation rules, and $\recN{\N}{0}{\m{succ}}{n} \leadsto n$, which corresponds to the uniqueness rule.\footnote{Note that it is very rare to include this uniqueness rule in the definition of $\leadsto$, just as it is rare to have a uniqueness rule for natural numbers when considering term convertibility.} There also are the congruence rules, although this time they look differently from these for the term convertibility judgement. First, there are congruence rules for the introduction rules: given $n \leadsto n'$ we have $\suc{n} \leadsto \suc{n'}$. Second, there are congruence rules for the elimination rule: given $z \leadsto z'$, we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z'}{s}{n}$; given $s \leadsto s'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s'}{n}$; and given $n \leadsto n'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s}{n'}$. The last congruence rule we need is says that given $X \leadsto X'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X'}{z}{s}{n}$.
+
+This leads us to consider the last ingredient we need in our description of computation, namely type computation. To denote that the type $A$ reduces to $A'$ in a single computation step, we write $A \leadsto A'$. Type computation is not very interesting and consists exclusively of congruence rules. There aren't any congruence rules for $\N$, but for $\m{Fin}$ given $n \leadsto n'$ we have $\Fin{n} \leadsto \Fin{n'}$, whereas for function types we have two rules: given $A \leadsto A'$ we have $A \to B \leadsto A' \to B$; and given $B \leadsto B'$ we have $A \to B \leadsto A \to B'$.
 
 Coq's logic\footnote{By Coq's logic we mean its term language, Gallina.} is consistent, which means that it is impossible to prove \m{False} in the empty context. This fact follows from a property enjoyed by Coq, called canonicity: every term in the empty context evaluates to a canonical form in a finite number of computation steps, no matter in what order these steps are carried out. A canonical form is what we intuitively expect the final result of a computation to look like: for natural numbers, the canonical forms are $0, 1, 2, \dots$ (i.e. $\m{0}, \m{\suc{0}}, \m{\suc{\suc{0}}}, \dots$), for booleans they are \m{true} and \m{false} and so on. In general, the canonical forms of an inductive type are generated by its constructors.
 
