--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -267,7 +267,7 @@ The core inference rules that govern the convertibility judgement ensure that it
 
 Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules. Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{X}{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{X}{z}{s}{\suc{n}}}{s(\recN{X}{z}{s}{n})}{X}$.
 
-Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{\N}{0}{\m{succ}}{n}}{n}{\N}$. Note that uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory don't have the above uniqueness rule for natural numbers. As for other types, uniqueness rules are common for the unit type, the product type and the function type. For other types uniqueness rules are rare.
+Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for function types states that given $\term{\Gamma}{f}{A \to B}$ we can derive $\termconv{\Gamma}{\lambda x.f(x)}{f}{A \to B}$. Uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory lack a uniqueness rule for the natural numbers. In general, uniqueness rules are common for the unit type, the product type, the function type and other negative types, whereas they are very rare for positive types.\footnote{The reason for not including uniqueness rules for positive types is mostly that they are hard to implement, but there also are some model-related concerns. See \cite{Eta} for how to formulate a uniqueness rule for the natural numbers and for a more philosophical discussion of uniqueness rules in general. Also see \cite{Polarity} for a lightweight introduction to the distinction between positive and negative types.}
 
 Besides computation and uniqueness rules, there is also a huge number of congruence rules which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that the successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{X}{z_1}{s_1}{n_1}}{\recN{X}{z_2}{s_2}{n_2}}{X}$.
 
@@ -279,19 +279,31 @@ The most important core rule that involves type convertibility is called the sub
 
 Moreover, for each type formation rule we have one congruence rule which says that types formed from equal components are equal. For example, for the type $\Fin{n}$ we have the congruence rule which says if we can derive $\termconv{\Gamma}{n}{m}{\N}$, then we can derive $\typeconv{\Gamma}{\Fin{n}}{\Fin{m}}$. These congruence rules allow us to answer our initial question in the affirmative -- because $2 + 2$ and $3 + 1$ are convertible, i.e. $\termconv{\Gamma}{2 + 2}{3 + 1}{\N}$, the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$ are also convertible, i.e. $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{3 + 1}}$.
 
-We are mostly done describing type theory, but we will take some more time to list differences between our presentation and what may be found elsewhere. First, some presentations of type theory can include additional judgements. For example, there may be a context convertibility judgement -- because types like $\Fin{2 + 2}$ and $\Fin{3 + 1}$ can appear in contexts as part of an assumption, judging whether two contexts are equal may be of importance. This is especially the case in more concrete presentations aimed at implementation. See \cite{Danielsson} and \cite{EatItself} for type theories that have a context convertibility judgement.
+We are mostly done describing type theory, but we will take some more time to list differences between our presentation and what may be found elsewhere. First, some presentations of type theory can include additional judgements. For example, there may be a context convertibility judgement -- because convertible but not syntactically identical types like $\Fin{2 + 2}$ and $\Fin{3 + 1}$ can appear in contexts as part of an assumption, judging whether two contexts are equal may be of importance. This is especially the case in more concrete presentations aimed at implementation. See \cite{Danielsson} and \cite{EatItself} for type theories that have a context convertibility judgement.
 
-Second, some presentations of types theory may not have some of the judgements we have seen. This is particularly the case for the type formation judgement and the type convertibility judgement, as they may be replaced by formulating type formation rules as introduction rules for the universe\footnote{We didn't discuss universes in our presentation, as their handling is somewhat technical.} and type convertibility rules as term convertibility rules for the universe. See \cite{HoTTBook} (Appendix A) for a text that takes this approach.
+Second, some presentations of type theory may not have some of the judgements we have seen. This is most often the case for the type formation judgement and the type convertibility judgement, as they may be replaced by formulating type formation rules as introduction rules for the universe\footnote{We didn't discuss universes in our presentation, as their handling is somewhat technical.} and type convertibility rules as term convertibility rules for the universe. See \cite{HoTTBook} (Appendix A) for a text that takes this approach.
 
-We didn't discuss substitution in our presentation of type theory, but there are typically two ways of doing it. The first one, called implicit substitutions, is to define a meta-level substitution function by recursion. The second one, called explicit substitutions, is to introduce more judgements (the well-formed substitution judgement and the substitution convertibility judgement) and more inference rules for term and type convertibility which describe how the substitutions are actually computed. The implicit approach is more abstract, less detailed and, in general, better suited for informal presentations. The explicit approach is more concrete, more detailed and better fit for the purpose of implementation. For presentations of type theory with explicit substitutions, see \cite{Danielsson} and \cite{EatItself}.
+We didn't discuss substitution in our presentation of type theory, but there are typically two ways of doing it. The first one, called implicit substitutions, is to define a meta-level substitution function by (mutual) recursion on terms, types and contexts. The second one, called explicit substitutions, is to introduce more judgements (the well-formed substitution judgement and the substitution convertibility judgement) and more inference rules for term and type convertibility which describe how the substitutions are actually computed. The implicit approach is more abstract, less detailed and, in general, better suited for informal presentations. The explicit approach is more concrete, more detailed and better fit for the purpose of implementation. For presentations of type theory with explicit substitutions, see \cite{Danielsson} and \cite{EatItself}.
 
 Of course our presentation of type theory is far from being complete -- to be, we would have to list all the formation, introduction, elimination, computation and uniqueness rules for all types. If we also diligently list all the boring congruence rules, the number of inference rules can easily surpass one hundred. But even though a full formal presentation of type theory is massive, the basic idea behind it is very simple and beautiful.
 
-Having discussed how type theory works, it's time to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of the previously discussed computation and uniqueness rules for term convertibility. Besides, there is a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
+Having discussed how type theory works, it's time to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of computation rules for term convertibility. Besides, there is a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
 
-Let's see how this looks for natural numbers. We have $\recN{X}{z}{s}{0} \leadsto z$ and $\recN{X}{z}{s}{\suc{n}} \leadsto s(\recN{X}{z}{s}{n})$, which correspond to the computation rules, and $\recN{\N}{0}{\m{succ}}{n} \leadsto n$, which corresponds to the uniqueness rule.\footnote{Note that it is very rare to include this uniqueness rule in the definition of $\leadsto$, just as it is rare to have a uniqueness rule for natural numbers when considering term convertibility.} There also are the congruence rules, although this time they look differently from these for the term convertibility judgement. First, there are congruence rules for the introduction rules: given $n \leadsto n'$ we have $\suc{n} \leadsto \suc{n'}$. Second, there are congruence rules for the elimination rule: given $z \leadsto z'$, we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z'}{s}{n}$; given $s \leadsto s'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s'}{n}$; and given $n \leadsto n'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s}{n'}$. The last congruence rule we need is says that given $X \leadsto X'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X'}{z}{s}{n}$.
+Let's see how this looks for natural numbers. We have $\recN{X}{z}{s}{0} \leadsto z$ and $\recN{X}{z}{s}{\suc{n}} \leadsto s(\recN{X}{z}{s}{n})$, which correspond to the computation rules.\footnote{For functions, we would also have $\lambda x.f(x) \leadsto f$, which corresponds to the uniqueness rule.} There also are the congruence rules, although this time they look differently from these for the term convertibility judgement. First, there are congruence rules for the introduction rules: given $n \leadsto n'$ we have $\suc{n} \leadsto \suc{n'}$. Second, there are congruence rules for the elimination rule: given $z \leadsto z'$, we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z'}{s}{n}$; given $s \leadsto s'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s'}{n}$; and given $n \leadsto n'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s}{n'}$. The last congruence rule we need says that given $X \leadsto X'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X'}{z}{s}{n}$.
 
 This leads us to consider the last ingredient we need in our description of computation, namely type computation. To denote that the type $A$ reduces to $A'$ in a single computation step, we write $A \leadsto A'$. Type computation is not very interesting and consists exclusively of congruence rules. There aren't any congruence rules for $\N$, but for $\m{Fin}$ given $n \leadsto n'$ we have $\Fin{n} \leadsto \Fin{n'}$, whereas for function types we have two rules: given $A \leadsto A'$ we have $A \to B \leadsto A' \to B$; and given $B \leadsto B'$ we have $A \to B \leadsto A \to B'$.
+
+We now know enough about $\leadsto$ to state all the interesting metatheorems. The first one is uniqueness of types: if we have $\type{\Gamma}{t}{A}$ and $\type{\Gamma}{t}{A'}$, then we can derive $\typeconv{\Gamma}{A}{A'}$. The second is usually called ``preservation'' or ``subject reduction'' and says that given $\type{\Gamma}{t}{A}$ and $t \leadsto t'$ we can derive $\type{\Gamma}{t'}{A}$.
+
+Another property, called strong normalization, is that the converse of the relation $\leadsto$ is well-founded. Stated more explicitly this means that all reduction sequences of the form $t_0 \leadsto t_1 \leadsto \dots$ are finite. Yet more explicitly, this says that every term $t$ reduces to a normal form -- a term $t'$ which doesn't reduce anymore.
+
+To state the next property we need to introduce the relation $\leadsto_*$, which denotes the reflexive-transitive closure of $\leadsto$. Explicitly: $t \leadsto^* t'$ means that $t$ computes to $t'$ in zero or more steps.
+
+The next property is called confluence: given $t \leadsto^* t_1$ and $t \leadsto^* t_2$, there exists a term $t'$ such that $t_1 \leadsto^* t'$ and $t_2 \leadsto^* t'$.
+
+Taken together, strong normalization and confluence imply as a corollary the Unicity of Normal Forms: for every term $t$ there exists precisely one term $t'$ in normal form such that $t \leadsto^* t'$.
+
+
 
 Coq's logic\footnote{By Coq's logic we mean its term language, Gallina.} is consistent, which means that it is impossible to prove \m{False} in the empty context. This fact follows from a property enjoyed by Coq, called canonicity: every term in the empty context evaluates to a canonical form in a finite number of computation steps, no matter in what order these steps are carried out. A canonical form is what we intuitively expect the final result of a computation to look like: for natural numbers, the canonical forms are $0, 1, 2, \dots$ (i.e. $\m{0}, \m{\suc{0}}, \m{\suc{\suc{0}}}, \dots$), for booleans they are \m{true} and \m{false} and so on. In general, the canonical forms of an inductive type are generated by its constructors.
 
@@ -1547,6 +1559,16 @@ It would also be worth exploring how other algorithmic activities described in s
     Idris 2 documentation, \\
     \href{https://idris2.readthedocs.io/en/latest/tutorial/multiplicities.html}{\textit{Docs » A Crash Course in Idris 2 » Multiplicities}}, 2021, \\
     \wayback{https://web.archive.org/web/20210515164227/https://idris2.readthedocs.io/en/latest/tutorial/multiplicities.html}
+
+\bibitem{Eta}
+    Ansten Klev,
+    \href{https://philpapers.org/rec/KLEEIM}{\textit{Eta-rules in Martin-L\"{o}f type theory}}, 2019
+
+\bibitem{Polarity}
+    Robert Harper,
+    \href{https://existentialtype.wordpress.com/2012/08/25/polarity-in-type-theory/}{\textit{Polarity in Type Theory}},
+    2012,
+    \wayback{https://web.archive.org/web/20210601212646/https://existentialtype.wordpress.com/2012/08/25/polarity-in-type-theory/}
 
 \bibitem{Danielsson}
     Nils Anders Danielsson, \\
