Thesis: more metatheorems of type theory.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -22,7 +22,7 @@
 % w przypadku kilku promotorow, lub koniecznosci podania ich afiliacji, linie
 % w ponizszym poleceniu mozna zlamac poleceniem \fmlinebreak
 \advisor        {dr Małgorzata Biernacka}
-\date           {Kwiecień 2021} % Data zlozenia pracy
+\date           {Czerwiec 2021} % Data zlozenia pracy
 % Dane do oswiadczenia o autorskim wykonaniu
 %\transcriptnum {}                     % Numer indeksu
 %\advisorgen    {dr. Jana Kowalskiego} % Nazwisko promotora w dopelniaczu
@@ -267,11 +267,11 @@ The core inference rules that govern the convertibility judgement ensure that it
 
 Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules. Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{X}{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{X}{z}{s}{\suc{n}}}{s(\recN{X}{z}{s}{n})}{X}$.
 
-Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for function types states that given $\term{\Gamma}{f}{A \to B}$ we can derive $\termconv{\Gamma}{\lambda x.f(x)}{f}{A \to B}$. Uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory lack a uniqueness rule for the natural numbers. In general, uniqueness rules are common for the unit type, the product type, the function type and other negative types, whereas they are very rare for positive types.\footnote{The reason for not including uniqueness rules for positive types is mostly that they are hard to implement, but there also are some model-related concerns. See \cite{Eta} for how to formulate a uniqueness rule for the natural numbers and for a more philosophical discussion of uniqueness rules in general. Also see \cite{Polarity} for a lightweight introduction to the distinction between positive and negative types.}
+Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for function types states that given $\term{\Gamma}{f}{A \to B}$ we can derive $\termconv{\Gamma}{\lambda x.f(x)}{f}{A \to B}$. Uniqueness rules are completely optional -- a type need not have any. For example, almost all presentations of type theory lack a uniqueness rule for the natural numbers. In general, uniqueness rules are common for the unit type, the product type, the function type and other negative types, whereas they are very rare for positive types.\footnote{The reason for not including uniqueness rules for positive types is mostly that they are hard to implement, but there also are some model-related concerns. See \cite{Eta} for how to formulate a uniqueness rule for the natural numbers and for a more philosophical discussion of uniqueness rules in general. Also see \cite{Polarity} for a lightweight blogpost introducing the distinction between positive and negative types.}
 
 Besides computation and uniqueness rules, there is also a huge number of congruence rules which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that the successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{X}{z_1}{s_1}{n_1}}{\recN{X}{z_2}{s_2}{n_2}}{X}$.
 
-This is the end of our description of convertibility of terms, but the matter of computation hasn't been settled yet. Because types can depend on terms, computation can also occur inside types, which prompts us to consider not only term equality, but also type equality. Recall the type $\type{n : \N}{\Fin{n}}$ that has exactly $n$ elements. What relationships are there between instances of this type with various terms substituted\footnote{We won't discuss substitution in our presentation for type theory.} for $n$? For example, what is the relation between the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$? Are they the same or different?
+This is the end of our description of convertibility of terms, but the matter of computation hasn't been settled yet. Because types can depend on terms, computation can also occur inside types, which prompts us to consider not only term equality, but also type equality. Recall the type $\type{n : \N}{\Fin{n}}$ that has exactly $n$ elements. What relationships are there between instances of this type with various terms substituted\footnote{We won't discuss substitution in our presentation of type theory.} for $n$? For example, what is the relation between the types $\Fin{2 + 2}$ and $\Fin{3 + 1}$? Are they the same or different?
 
 To even be able to ask this question formally, we need another kind of judgement, namely the type convertibility judgement $\typeconv{\Gamma}{A}{B}$ which asserts that the types $A$ and $B$ are convertible. Similarly to what was the case for term convertibility, if the inference rules for this judgement are defined in the right way, we obtain for free a notion of type computation such that two types are convertible precisely when they compute to the same result.
 
@@ -287,23 +287,23 @@ We didn't discuss substitution in our presentation of type theory, but there are
 
 Of course our presentation of type theory is far from being complete -- to be, we would have to list all the formation, introduction, elimination, computation and uniqueness rules for all types. If we also diligently list all the boring congruence rules, the number of inference rules can easily surpass one hundred. But even though a full formal presentation of type theory is massive, the basic idea behind it is very simple and beautiful.
 
-Having discussed how type theory works, it's time to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of computation rules for term convertibility. Besides, there is a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
+Having discussed how type theory works, we would also want to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of computation rules for term convertibility. Besides, there is also a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
 
 Let's see how this looks for natural numbers. We have $\recN{X}{z}{s}{0} \leadsto z$ and $\recN{X}{z}{s}{\suc{n}} \leadsto s(\recN{X}{z}{s}{n})$, which correspond to the computation rules.\footnote{For functions, we would also have $\lambda x.f(x) \leadsto f$, which corresponds to the uniqueness rule.} There also are the congruence rules, although this time they look differently from these for the term convertibility judgement. First, there are congruence rules for the introduction rules: given $n \leadsto n'$ we have $\suc{n} \leadsto \suc{n'}$. Second, there are congruence rules for the elimination rule: given $z \leadsto z'$, we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z'}{s}{n}$; given $s \leadsto s'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s'}{n}$; and given $n \leadsto n'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s}{n'}$. The last congruence rule we need says that given $X \leadsto X'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X'}{z}{s}{n}$.
 
-This leads us to consider the last ingredient we need in our description of computation, namely type computation. To denote that the type $A$ reduces to $A'$ in a single computation step, we write $A \leadsto A'$. Type computation is not very interesting and consists exclusively of congruence rules. There aren't any congruence rules for $\N$, but for $\m{Fin}$ given $n \leadsto n'$ we have $\Fin{n} \leadsto \Fin{n'}$, whereas for function types we have two rules: given $A \leadsto A'$ we have $A \to B \leadsto A' \to B$; and given $B \leadsto B'$ we have $A \to B \leadsto A \to B'$.
+This leads us to consider the last ingredient we need in our description of computation, namely type computation. To denote that the type $A$ reduces to $A'$ in a single computation step, we write $A \leadsto A'$. The rules for type computation are not very interesting and consist exclusively of congruence rules.\footnote{The interesting cases of type-level computation, like computing a type by recursion on a natural number, are already covered by rules for term computation.} There aren't any congruence rules for $\N$, but for $\m{Fin}$ given $n \leadsto n'$ we have $\Fin{n} \leadsto \Fin{n'}$, whereas for function types we have two rules: given $A \leadsto A'$ we have $A \to B \leadsto A' \to B$; and given $B \leadsto B'$ we have $A \to B \leadsto A \to B'$. We now know enough about computation to state all the interesting metatheorems.
 
-We now know enough about $\leadsto$ to state all the interesting metatheorems. The first one is uniqueness of types: if we have $\type{\Gamma}{t}{A}$ and $\type{\Gamma}{t}{A'}$, then we can derive $\typeconv{\Gamma}{A}{A'}$. The second is usually called ``preservation'' or ``subject reduction'' and says that given $\type{\Gamma}{t}{A}$ and $t \leadsto t'$ we can derive $\type{\Gamma}{t'}{A}$.
+The most important metatheoretic property of type theory, called strong normalization, is that the converse of the relation $\leadsto$ is well-founded. Stated more explicitly, strong normalization says that all sequences of computation steps of the form $t_0 \leadsto t_1 \leadsto \dots$ are finite. Even more explicitly, this means that every term $t$ has a normal form, i.e. after a finite number of computation steps (no matter in which order these steps are performed) it eventually computes to some term $t'$ which doesn't compute anymore.
 
-Another property, called strong normalization, is that the converse of the relation $\leadsto$ is well-founded. Stated more explicitly this means that all reduction sequences of the form $t_0 \leadsto t_1 \leadsto \dots$ are finite. Yet more explicitly, this says that every term $t$ reduces to a normal form -- a term $t'$ which doesn't reduce anymore.
+The next important metatheoretic property of type theory, called confluence, says that if $t \leadsto^* t_1$ and $t \leadsto^* t_2$, then there exists a term $t'$ such that $t_1 \leadsto^* t'$ and $t_2 \leadsto^* t'$. Here the relation $\leadsto^*$ denotes the reflexive-transitive closure of $\leadsto$, i.e. $t \leadsto^* t'$ means that $t$ computes to $t'$ after zero or more computation steps. In ordinary words: confluence is a kind of generalized determinism -- the computation relation $\leadsto$ is not deterministic, but if a term computes to two different terms, these will in turn, sooner or later, compute to the same term. To paraphrase once more: confluence means that every term $t$ has at most one normal form.
 
-To state the next property we need to introduce the relation $\leadsto_*$, which denotes the reflexive-transitive closure of $\leadsto$. Explicitly: $t \leadsto^* t'$ means that $t$ computes to $t'$ in zero or more steps.
+Yet another property of type theory, usually called  ``preservation'' or ``subject reduction'', says that if $\term{\Gamma}{t}{A}$ and $t \leadsto t'$, then we can derive $\type{\Gamma}{t'}{A}$. This one is easy to grasp intuitively -- it means that computation of a term preserves its type. 
 
-The next property is called confluence: given $t \leadsto^* t_1$ and $t \leadsto^* t_2$, there exists a term $t'$ such that $t_1 \leadsto^* t'$ and $t_2 \leadsto^* t'$.
+
 
 Taken together, strong normalization and confluence imply as a corollary the Unicity of Normal Forms: for every term $t$ there exists precisely one term $t'$ in normal form such that $t \leadsto^* t'$.
 
-
+The first one is uniqueness of types: if we have $\term{\Gamma}{t}{A}$ and $\term{\Gamma}{t}{A'}$, then we can derive $\typeconv{\Gamma}{A}{A'}$.
 
 Coq's logic\footnote{By Coq's logic we mean its term language, Gallina.} is consistent, which means that it is impossible to prove \m{False} in the empty context. This fact follows from a property enjoyed by Coq, called canonicity: every term in the empty context evaluates to a canonical form in a finite number of computation steps, no matter in what order these steps are carried out. A canonical form is what we intuitively expect the final result of a computation to look like: for natural numbers, the canonical forms are $0, 1, 2, \dots$ (i.e. $\m{0}, \m{\suc{0}}, \m{\suc{\suc{0}}}, \dots$), for booleans they are \m{true} and \m{false} and so on. In general, the canonical forms of an inductive type are generated by its constructors.
 
